Fix spacing of post content on post page.

--- a/assets/scss/common.scss
+++ b/assets/scss/common.scss
@@ -118,4 +118,9 @@ $o-card-is-silent: false;
 	.alphaville-card__heading {
 		margin-bottom: 0;
 	}
+
+	.alphaville-card {
+		padding-left: 0;
+		margin-bottom: 20px;
+	}
 }
